--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -203,7 +203,7 @@ a.button2:hover {
 }
 
 .button7 {
-  background-color: #e7f0fd;
+  background-color: #D4E3FC;
 }
 
 a.button7:hover {
@@ -243,7 +243,7 @@ a.button7:hover {
   -webkit-border-radius:7px;
   -moz-border-radius:7px;
   border-radius:7px;
-  background-color:#e7f0fd;
+  background-color:#D4E3FC;
   font-size: 1.1em;
   cursor:pointer;
   &:hover {
