--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -2,9 +2,9 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>Measure your blood pressure</p>
-			<p id='second'>Sign up to get free advice from UK GPs</p>
-			<p id='third'>Get prescriptions delivered to your door</p>
+			<p id='first'>Use a home blood pressure monitor</p>
+			<p id='second'>Get free advice from UK GPs</p>
+			<p id='third'>Have a prescription delivered to your door</p>
 			<div class='clear_float'></div>
 		</div>
 	</div>
@@ -21,7 +21,7 @@
 		<div id='strip3_content'>
 			<h2>Measuring blood pressure</h2>
 			<h3>How can HomeBloodPressure.co.uk help me monitor my blood pressure?</h3>
-			<p>You’ll be able to follow simple instructions on how to measure your blood pressure. You’ll be able to easily record your blood pressure measurements. You’ll get reminders of when you need to next check your blood pressure. We’ll do all the hard work for you, by working out a running average of your blood pressure readings.
+			<p>You’ll be able to follow simple instructions on how to measure your blood pressure. You’ll be able to easily record your blood pressure measurements. You’ll get reminders of when you need to next check your blood pressure. We’ll do all the hard work for you by calculating a running average of your blood pressure readings. You'll then get free personalised advice!
 			<% if !user_signed_in? %>
 				<%= link_to 'Find out more.', static_pages_features_path %>
 			<% end %>
