--- a/app/views/info/info/treating_blood_pressure.html.erb
+++ b/app/views/info/info/treating_blood_pressure.html.erb
@@ -26,20 +26,20 @@
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_lifestyle_options_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>Lifestyle options</span></span>
+			<%= link_to(info_lifestyle_options_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_apple_small_3.jpg") %>
-				<span class='link_text'>What can I change to help my blood pressure? What should I eat? What about exercise? Find out here...</span>
+				<span id='link_title'>Lifestyle options</span>
+				<span class='link_text'>You can improve your blood pressure by making some small lifestyle changes... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_complementary_therapy_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>Complementary therapy</span></span>
+			<%= link_to(info_complementary_therapy_path, :class => 'info_link2') do %>
 				<%= image_tag("acupuncture_small.jpg") %>
-				<span class='link_text'>Which natural supplements can help my blood pressure? What about acupuncture? Find out here...</span>
+				<span id='link_title'>Complementary therapy</span>
+				<span class='link_text'>Some people try supplements or acupuncture to help their blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_medication_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>Medication</span></span>
+			<%= link_to(info_medication_path, :class => 'info_link1') do %>
 				<%= image_tag("tablets_small.jpg") %>
-				<span class='link_text'>What is the best medication for me? How can I reduce the risk of side effects? Why do I need more than one medication? Find out here...</span>
+				<span id='link_title'>Medication</span>
+				<span class='link_text'>You can choose from lots of different medications to help with your blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
 			
 			<div class='clear_float'>
