--- a/app/views/info/info/complementary_therapy.html.erb
+++ b/app/views/info/info/complementary_therapy.html.erb
@@ -21,16 +21,16 @@
 			<h2>Complementary therapy for high blood pressure</h2>
 		</div>
 		
-		<div id='links_2'>
-			<%= link_to(info_supplements_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>Supplements</span></span>
+		<div id='links'>
+			<%= link_to(info_supplements_path, :class => 'info_link1') do %>
 				<%= image_tag("multiple_pills_small_2.jpg") %>
-				<span class='link_text'>Which supplements can help my blood pressure? Find out here...</span>
+				<span id='link_title'>Supplements</span>
+				<span class='link_text'>Some supplements claim to be able to help lower your blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_acupuncture_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>Acupuncture</span></span>
+			<%= link_to(info_acupuncture_path, :class => 'info_link2') do %>
 				<%= image_tag("acupuncture_small.jpg") %>
-				<span class='link_text'>How can acupuncture help my blood pressure? Find out here...</span>
+				<span id='link_title'>Acupuncture</span>
+				<span class='link_text'>Acupuncture has been used to try to lower blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
 			
 			<div class='clear_float'>
