--- a/app/views/info/info/home_page.html.erb
+++ b/app/views/info/info/home_page.html.erb
@@ -19,24 +19,24 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>Information and advice</h2>
-			<p>By using this site you’ll be getting clear information about your blood pressure. You’ll get up to date personalised advice from UK GPs. You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
+			<p>By using this site you’ll get clear information about your blood pressure. You’ll get up to date personalised advice from UK GPs. You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
 		</div>
 		
 		<div id='links'>
 			<%= link_to(info_what_is_blood_pressure_path, :class => 'info_link1') do %>
 				<%= image_tag("heart_bp_monitor_small.jpg") %>
 				<span id='link_title'>What is blood pressure?</span>
-				<span class='link_text'>What am I measuring? What do the numbers mean? What is the normal range for me? Find out more here…</span>
+				<span class='link_text'>It is a measure of the pressure in your arteries... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_measuring_blood_pressure_path, :class => 'info_link2') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
 				<span id='link_title'>Measuring blood pressure</span>
-				<span class='link_text'>How do I measure my blood pressure? When should I measure it? How do I choose a blood pressure machine? Find out more here…</span>
+				<span class='link_text'>Using a home blood pressure machine is a good way to measure your blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_treating_blood_pressure_path, :class => 'info_link1') do %>
 				<%= image_tag("tablets_small.jpg") %>
 				<span id='link_title'>Treating blood pressure</span>
-				<span class='link_text'>How should I change my diet? Which supplements help? What is the best medication for me? Find out more here...</span>
+				<span class='link_text'>As well as medications, there are some changes you can make yourself... <span class='more'>find out more.</span></span>
 			<% end %>
 		
 		</div>
