--- a/app/views/info/info/lifestyle_options.html.erb
+++ b/app/views/info/info/lifestyle_options.html.erb
@@ -23,20 +23,20 @@
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_diet_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>Food and drink</span></span>
+			<%= link_to(info_diet_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_apple_small_3.jpg") %>
-				<span class='link_text'>What can I eat to help my blood pressure? What about the things that I drink? Find out here...</span>
+				<span id='link_title'>Food and drink</span>
+				<span class='link_text'>Your diet can help lower your blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_exercise_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>Exercise</span></span>
+			<%= link_to(info_exercise_path, :class => 'info_link2') do %>
 				<%= image_tag("man_running_small_3.jpg") %>
-				<span class='link_text'>How does exercise help my blood pressure? How much exercise do I need to do? Find out here...</span>
+				<span id='link_title'>Exercise</span>
+				<span class='link_text'>If you exercise regularly you will get numerous health benefits... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_smoking_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>Smoking</span></span>
+			<%= link_to(info_smoking_path, :class => 'info_link1') do %>
 				<%= image_tag("ashtray_small.jpg") %>
-				<span class='link_text'>How does smoking affect my blood pressure? Find out here...</span>
+				<span id='link_title'>Smoking</span>
+				<span class='link_text'>Smoking affects your health in many ways... <span class='more'>find out more.</span></span>
 			<% end %>
 			
 			<div class='clear_float'>
