--- a/app/views/info/info/what_is_blood_pressure.html.erb
+++ b/app/views/info/info/what_is_blood_pressure.html.erb
@@ -24,20 +24,20 @@
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_what_am_i_measuring_path, :class => 'info_link') do %>
-				<span id='link_title_1'><span id='link_title_content_1'>What am I measuring?</span></span>
+			<%= link_to(info_what_am_i_measuring_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span class='link_text'>Both numbers are important; they measure the pressure in your arteries at the highest and lowest points of your pulse. Find out more here...</span>
+				<span id='link_title'>What am I measuring?</span>
+				<span class='link_text'>The two numbers measure the pressure in your arteries at the highest and lowest points of your pulse... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_what_do_the_numbers_mean_path, :class => 'info_link') do %>
-				<span id='link_title_2'><span id='link_title_content_2'>What do the numbers mean?</span></span>
+			<%= link_to(info_what_do_the_numbers_mean_path, :class => 'info_link2') do %>
 				<%= image_tag("number_23_small.jpg") %>
-				<span class='link_text'>Your blood pressure is a measure of the pressure in your arteries. This gives you an idea of how hard your heart is having to work to pump blood around your body - find out more here…</span>
+				<span id='link_title'>What do the numbers mean?</span>
+				<span class='link_text'>They give you an idea of how hard your heart is having to work to pump blood around your body... <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_what_is_the_normal_range_for_me_path, :class => 'info_link') do %>
-				<span id='link_title_3'><span id='link_title_content_3'>What is the normal range?</span></span>
+			<%= link_to(info_what_is_the_normal_range_for_me_path, :class => 'info_link1') do %>
 				<%= image_tag("tick_small.jpg") %>
-				<span class='link_text'>The definition of normal blood pressure depends on whether you are on treatment or have any other medical conditions. Find out more here…</span>
+				<span id='link_title'>What is the normal range?</span>
+				<span class='link_text'>This depends on whether you are on treatment or have any other medical conditions... <span class='more'>find out more.</span></span>
 			<% end %>
 			
 			<div class='clear_float'>
