--- a/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/when_should_i_measure_my_blood_pressure.html.erb
@@ -2,9 +2,9 @@
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>Measure your blood pressure</p>
-			<p id='second'>Sign up to get free advice from UK GPs</p>
-			<p id='third'>Get prescriptions delivered to your door</p>
+			<p id='first'>Use a home blood pressure monitor</p>
+			<p id='second'>Get free advice from UK GPs</p>
+			<p id='third'>Have a prescription delivered to your door</p>
 			<div class='clear_float'></div>
 		</div>
 	</div>
