small copy change

--- a/app/views/info/info/how_do_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/how_do_i_measure_my_blood_pressure.html.erb
@@ -12,7 +12,7 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>How do I measure my blood pressure?</h2>
-			<p>Follow these simple steps to measure your blood pressure at home. Then sign up to our free service and you can find out what you need to do next.
+			<p>Follow these simple steps to measure your blood pressure at home. Sign up and use our free service to record your blood pressure measurements. Get personalised advice from UK GPs. Then get your prescriptions delivered to your door if you need them.
 			<% if !user_signed_in? %>
 				<%= link_to 'Find out more.', static_pages_features_path %>
 			<% end %>
