--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -3,10 +3,14 @@
   
     #strip1 {
       width: 100%;
+      min-height: 30px;
       background-color: #ffffff;
     
       #strip1_content {
-        padding: 50px 5% 20px 5%;   
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 40px 0px 40px 0px;   
       
         h1 {
           font-size:2.5em;
@@ -15,23 +19,11 @@
           line-height: 35px;
           margin: 0px 0px 10px 0px;
         }
-      
-        #first, #second, #third {
-          font-family: arial, verdana, helvetica, sans-serif;
-          font-size: 1.2em;
-          margin-left: 3%;
-        }
-      
-        #first {
-          color: #0844A4;
-        }
-      
-        #second {
-          color: #1464F6;
-        }
         
-        #third {
-          color: #3D8AF7;
+        p {
+          font-size:1.1em;
+          color: #000000;
+          margin: 15px 5px 0px 3%;
         }
       }
     }
@@ -42,43 +34,102 @@
       margin-bottom: 30px;
       
       #strip2_content {
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
         padding-bottom: 30px;
-        padding-left: 5%;
-        padding-top: 30px; 
+        padding-top: 30px;
         
-        h2 {
-          font-size:1.8em;
-          color: #033076;
-          font-weight: normal;
-          margin: 0px;
-          line-height: 28px;
+        #text {
+        
+          h2 {
+            font-size:1.8em;
+            color: #033076;
+            font-weight: normal;
+            margin: 0px;
+            line-height: 28px;
+          }
+        
+          p {
+            font-size:1.1em;
+            color: #000000;
+            margin: 15px 5px 0px 3%;
+          
+            span {
+              font-weight: bold;
+            }
+          }
+        
+          #input_bp {
+            margin: 15px 0px 0px 3%;
+            
+            #current_bp_sysbp, #current_bp_diabp {
+              width: 70px;
+              padding: 5px;
+              font-size: 1.2em;
+              border-style:solid;
+              border-width:2px;
+              border-color:#033076;
+            }
+
+            #slash {
+              font-size: 1.4em;
+              padding: 10px 10px 0px 10px;
+            }
+
+            #mmhg {
+              font-size: 0.8em;
+              padding: 10px 0px 0px 10px;
+              vertical-align: bottom;
+            }
+        
+            #submit {
+              padding-left: 30px;
+            }
+          
+            #error_explanation {
+              margin-bottom: 20px;
+            }
+          }
         }
         
-        p {
-          font-size:1.1em;
-          color: #000000;
-          margin: 15px 5px 0px 3%;
+        #graphic {
+          //float: right;
+          width: 210px;
+          margin: 0px auto 15px auto;
+          padding-top: 10px;
           
-          span {
-            font-weight: bold;
-          }
-        }
-        
-        #input_bp {
-        margin: 15px 0px 0px 25px;
-        
-          #input_bp_boxes {
-            float:left;
-            margin-bottom: 10px;
-          }
-        
-          #submit {
-            float:left;
-            margin-left: 30px;
-          }
-          
-          #error_explanation {
-            margin-bottom: 20px;
+          #promo {
+            width: 100%;
+            height: 300px;
+            border-style:solid;
+            border-width:2px;
+            border-color:#033076;
+            -webkit-border-radius:10px;
+            -moz-border-radius:10px;
+            border-radius:10px;
+            background-color:#ffffff;
+            
+            .number {
+              font-size:2em;
+              color: #033076;
+              padding: 15px 5px 0px 15px;
+            }
+            
+            .msg {
+              font-size:1.1em;
+              color: #000000;
+              line-height: 18px;
+              vertical-align: top;
+              padding: 15px 15px 0px 0px;
+            }
+            
+            a {
+              display: block;
+              margin-top: 15px;
+              font-size: 1.4em;
+              text-align: center;
+            }
           }
         }
       }
@@ -92,7 +143,7 @@
       
       #strip3_content {
         width: 90%;
-        max-width: 1000px;
+        //max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 10px;
@@ -164,12 +215,12 @@
             color:#000000;
             background-color: #ffffff;
               
-            #link_title, .link_text .more {
+            .link_title, .link_text .more {
               text-decoration: underline;
             }
           }
             
-          #link_title {
+          .link_title {
             display: block;
             padding: 10px 10px 10px 10px;
             font-size: 1.6em;
@@ -215,43 +266,30 @@
     #strip4 {
       width: 100%;
       background-color: #D4E3FC;
-      //margin-bottom: 30px;
+      margin-bottom: 30px;
       
       #strip4_content {
         width: 90%;
-        max-width: 1000px;
+        //max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 30px;
         
-        #welcome {
-          
-          p {
-            font-size: 1.1em;
-            color: #000000;
-            padding: 15px 0px 0px 3%;
-          }
-          
-          .bigger {
-            font-size: 1.3em;
-          }
-        }
-        
-        #text {
+        #welcome, #text {
           width: auto;
         
           p {
             font-size:1.1em;
             color: #000000;
             padding: 15px 0px 0px 3%;
+          }
             
-            .bigger {
-              font-size: 1.3em;
-            }
+          .bigger {
+            font-size: 1.3em;
+          }
             
-            .bold {
-              font-weight: bold;
-            }
+          .bold {
+            font-weight: bold;
           }
             
           #feature_1 {
@@ -271,7 +309,7 @@
           //float: right;
           width: 200px;
           margin: 0px auto 0px auto;
-          padding-top: 25px;
+          padding-top: 10px;
           
           #average_bp {
             position: relative;
@@ -404,7 +442,7 @@
       width: 100%;
       min-height: 370px;
       background-color: #e7f0fd;
-      //margin-bottom: 30px;
+      margin-bottom: 30px;
       
       #strip5_content {
         width: 90%;
@@ -458,8 +496,8 @@
     
         
     #strip1, #strip2, #strip3, #strip4, #strip5 {
-      max-width: 1000px;
-      margin: 0px auto 30px auto;
+      //max-width: 1000px;
+      //margin: 0px auto 30px auto;
     }
     
     
