--- a/app/views/info/_is_my_bp_too_high.html.erb
+++ b/app/views/info/_is_my_bp_too_high.html.erb
@@ -1,9 +1,6 @@
-<h2>Is my blood pressure too high?</h2>
-<p>Enter some blood pressure readings and we'll answer that question right away!</p>
+<h2>Is your blood pressure too high?</h2>
+<p>Enter some blood pressure readings and we'll let you know right away!</p>
 <div id='input_bp'>
 	<%= render 'current_bps/form' %>
-				
-	<div class='clear_float'>
-	</div>
 				
 </div>
