--- a/app/views/info/_promo.html.erb
+++ b/app/views/info/_promo.html.erb
@@ -1,7 +1,7 @@
 <div id='graphic'>
 	<div id='promo'>
 		<div id='title'>
-			No more waiting at the doctor's
+			No more waiting at the doctor's!
 		</div>
 		
 		<table>
