--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -63,6 +63,11 @@
           #input_bp {
             margin: 15px 0px 0px 3%;
             
+            td {
+              display: inline-block;
+              vertical-align: top;
+            }
+            
             #current_bp_sysbp, #current_bp_diabp {
               width: 70px;
               padding: 5px;
@@ -70,21 +75,23 @@
               border-style:solid;
               border-width:2px;
               border-color:#033076;
+              margin-bottom: 20px;
             }
 
             #slash {
               font-size: 1.4em;
-              padding: 10px 10px 0px 10px;
+              padding: 5px 10px 0px 10px;
+              //vertical-align: middle;
             }
 
             #mmhg {
               font-size: 0.8em;
-              padding: 10px 0px 0px 10px;
-              vertical-align: bottom;
+              padding: 10px 20px 0px 10px;
+              vertical-align: middle;
             }
         
             #submit {
-              padding-left: 30px;
+              padding: 0px 0px 0px 10px;
             }
           
             #error_explanation {
@@ -96,7 +103,7 @@
         #graphic {
           //float: right;
           width: 210px;
-          margin: 0px auto 15px auto;
+          margin: 0px auto 30px auto;
           padding-top: 10px;
           
           #promo {
