--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -232,8 +232,9 @@ a.button7:hover {
 }
 
 .button6 {
-  font-size:1.2em;
+  font-size:1.1em;
   padding:7px 20px 7px 20px;
+  color: #000000;
 }
 
 .button4, .button5 {
