formatted how do I measure my bp section with questions box

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -67,6 +67,16 @@
           }
         }
       }
+      
+      #strip3 {
+        #strip3_content {
+          #graphic {
+            float: right;
+            padding-right: 10px;
+            padding-left: 6%;
+          }
+        }
+      }
     }
   }
 }
