--- a/app/views/info/_is_my_bp_too_high.html.erb
+++ b/app/views/info/_is_my_bp_too_high.html.erb
@@ -1,6 +1,7 @@
-<h2>Is your blood pressure too high?</h2>
-<p>Enter some blood pressure readings and we'll let you know right away!</p>
-<div id='input_bp'>
-	<%= render 'current_bps/form' %>
-				
+<div id='text'>
+	<h2>Is your blood pressure too high?</h2>
+	<p>Enter some blood pressure readings and we'll let you know right away!</p>
+	<div id='input_bp'>
+		<%= render 'current_bps/promo_form' %>		
+	</div>
 </div>
