--- a/app/views/info/info/how_do_i_measure_my_blood_pressure.html.erb
+++ b/app/views/info/info/how_do_i_measure_my_blood_pressure.html.erb
@@ -1,22 +1,24 @@
 <div id='main'>
+	
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>Use a home blood pressure monitor</p>
-			<p id='second'>Get free advice from UK GPs</p>
-			<p id='third'>Have a prescription delivered to your door</p>
-			<div class='clear_float'></div>
-		</div>
-	</div>
-	
-	<div id='strip3'>
-		<div id='strip3_content'>
-			<h2>How do I measure my blood pressure?</h2>
 			<p>Follow these simple steps to measure your blood pressure at home. Sign up and use our free service to record your blood pressure measurements. Get personalised advice from UK GPs. Then get your prescriptions delivered to your door if you need them.
 			<% if !user_signed_in? %>
 				<%= link_to 'Find out more.', static_pages_features_path %>
 			<% end %>
 			</p>
+		</div>
+	</div>
+	
+	<div id='strip3'>
+		<div id='strip3_content'>
+			<div id='welcome'>
+				<h2>How do I measure my blood pressure?</h2>
+			</div>
+			<%= render 'info/questions' %>
+			<div id='text'>
+			
 			
 			<h3>Make sure you are sat comfortably</h3>
 			<p>Sit down and relax for five minutes before you check your blood pressure. Uncross your legs and put your feet on the floor. Wear loose clothing that allows access to your arm. If you need to use the toilet then do it before taking your blood pressure. If you’ve just had a cup of coffee or a cigarette then give it thirty minutes before you measure.</p>
@@ -28,11 +30,7 @@
 			<p>Roll up your sleeve. If your sleeve forms a tight band around your upper arm then you may need to remove your outer clothing. Take a reading by following the instructions that came with the monitor. Try to remain quiet and still whilst taking the reading.</p>
 			<p>When the machine has taken your reading, it will display two numbers. Record these numbers on the website. The bigger one is your systolic blood pressure. The lower one is your diastolic blood pressure. They are both equally important. The machine may also display a solitary number. This is your pulse. You do not need to record this.</p>
 			<p>Wait a minute and then repeat the process. Taking two readings will give a more accurate measure of your blood pressure. The site will prompt you to do this.</p>
-			<div id='any_questions'>
-				<%= link_to(new_message_path, :class => 'button4') do %>
-					Any questions?<br />
-					<span>Ask us here</span>
-				<% end %>
+
 			</div>
 		</div>
 	
