--- a/app/views/info/info/what_am_i_measuring.html.erb
+++ b/app/views/info/info/what_am_i_measuring.html.erb
@@ -1,12 +1,5 @@
 <div id='main'>
-	<div id='strip1'>
-		<div id='strip1_content'>
-			<h1>Find out more about your blood pressure</h1>
-			<p id='first'>FREE advice from UK GPs.</p>
-			<p id='second'>Online. Anytime.</p>
-			<div class='clear_float'></div>
-		</div>
-	</div>
+	<%= render 'info/what_is_bp_title' %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
