--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -150,10 +150,11 @@
       
       #strip3_content {
         width: 90%;
-        //max-width: 1000px;
         margin-left: auto;
         margin-right: auto;
         padding-bottom: 10px;
+        
+        #text, #welcome {
         
         h2 {
           font-size:1.8em;
@@ -188,6 +189,34 @@
             
             span {
               font-size:0.8em;
+            }
+          }
+        }
+      }
+      }
+      
+      #graphic {
+        //float: right;
+        width: 210px;
+        margin: 0px auto 30px auto;
+        padding-top: 10px;
+          
+        #questions {
+          width: 100%;
+          height: 150px;
+          border-style:solid;
+          border-width:2px;
+          border-color:#033076;
+          -webkit-border-radius:10px;
+          -moz-border-radius:10px;
+          border-radius:10px;
+          background-color:#ffffff;
+          
+          #questions_button {
+            margin: 20px 15px 0px 15px;
+            
+            a {
+              color: #000000;
             }
           }
         }
