--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -4,16 +4,15 @@
 		<% if !user_signed_in? %>
 			<div id='strip1_content'>
 				<h1>The best blood pressure treatment</h1>
-				<p id='first'>FREE advice from UK GPs.</p>
-				<p id='second'>Online. Anytime.</p>
-				<div class='clear_float'></div>
+				
 			</div>
 		<% end %>
 	</div>
 	
 	<div id='strip2'>
 		<div id='strip2_content'>
-			<h2>Is my blood pressure too high?</h2>
+			<div id='text'>
+			<h2>Is your blood pressure too high?</h2>
 			
 			<% if @bp_entry_details[:reading_no] == '1' %>
 				<% if old_bp_datetime_text == "" %>
@@ -33,11 +32,9 @@
 			<div id='input_bp'>
 				<%= render 'current_bps/form' %>
 				
-				<div class='clear_float'>
-				</div>
-				
 				<div style='height:200px;'>
 				</div>
+			</div>
 			</div>
 			
 		</div>
