--- a/app/views/info/info/how_do_i_choose_a_blood_pressure_machine.html.erb
+++ b/app/views/info/info/how_do_i_choose_a_blood_pressure_machine.html.erb
@@ -1,31 +1,28 @@
 <div id='main'>
+	
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>Use a home blood pressure monitor</p>
-			<p id='second'>Get free advice from UK GPs</p>
-			<p id='third'>Have a prescription delivered to your door</p>
-			<div class='clear_float'></div>
-		</div>
-	</div>
-	
-	<div id='strip3'>
-		<div id='strip3_content'>
-			<h2>How do I choose a blood pressure machine?</h2>
 			<p>We’ll help you choose the blood pressure machine that is right for you. Then you’ll get clear advice on how to use it. Once you sign up to our free service, we’ll do all the hard work to help you get the most accurate picture of your blood pressure.
 			<% if !user_signed_in? %>
 				<%= link_to 'Find out more.', static_pages_features_path %>
 			<% end %>
 			</p>
+		</div>
+	</div>
+	
+	<div id='strip3'>
+		<div id='strip3_content'>
+			<div id='welcome'>
+				<h2>How do I choose a blood pressure machine?</h2>
+			</div>
+			<%= render 'info/questions' %>
+			<div id='text'>
+			
 			<p>There are many different blood pressure monitors to choose from. You don’t need to spend a lot of money to get an accurate one. You should choose one that measures your blood pressure around your upper arm. Blood pressure monitors that go around the wrist are not accurate enough. This is because the readings on wrist monitors change with the position of your arm. Other methods of home blood pressure monitoring have not been validated yet.</p>
 			<p>When choosing a blood pressure monitor, it is important to buy one that has a cuff that fits you. If you have a larger figure you may need to buy a large or extra large cuff separately. You can tell whether the cuff fits you as they have marks showing their normal size range on them.</p>
 			<p>Generally the more expensive monitors have extra memory functions compared to the cheaper ones. They may also be more compact or made of better quality materials. Although these may be nice to have, they are not essential. The more expensive monitors are not any more accurate than the cheaper ones.</p>
 			<p>The <%= link_to 'British Hypertension Society', 'http://www.bhsoc.org//index.php?cID=246', :target => '_blank' %> checks the accuracy of monitors and has a list of approved monitors <%= link_to 'here', 'http://www.bhsoc.org//index.php?cID=246', :target => '_blank' %>.</p>
-			<div id='any_questions'>
-				<%= link_to(new_message_path, :class => 'button4') do %>
-					Any questions?<br />
-					<span>Ask us here</span>
-				<% end %>
 			</div>
 		</div>
 	
