--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -1,17 +1,20 @@
 <div id='main'>
+	
 	<div id='strip1'>
 		<div id='strip1_content'>
 			<h1>How you can measure your blood pressure</h1>
-			<p id='first'>Use a home blood pressure monitor</p>
-			<p id='second'>Get free advice from UK GPs</p>
-			<p id='third'>Have a prescription delivered to your door</p>
-			<div class='clear_float'></div>
+			<p>You’ll be able to follow simple instructions on how to measure your blood pressure. You’ll be able to easily record your blood pressure measurements. You’ll get reminders of when you need to next check your blood pressure. We’ll do all the hard work for you by calculating a running average of your blood pressure readings. You'll then get free personalised advice!
+			<% if !user_signed_in? %>
+				<%= link_to 'Find out more.', static_pages_features_path %>
+			<% end %>
+			</p>
 		</div>
 	</div>
 	
 	<% if !user_signed_in? %>
 	<div id='strip2'>
 		<div id='strip2_content'>
+			<%= render 'info/promo' %>
 			<%= render 'info/is_my_bp_too_high' %>
 		</div>
 	</div>
@@ -20,28 +23,22 @@
 	<div id='strip3'>
 		<div id='strip3_content'>
 			<h2>Measuring blood pressure</h2>
-			<h3>How can HomeBloodPressure.co.uk help me monitor my blood pressure?</h3>
-			<p>You’ll be able to follow simple instructions on how to measure your blood pressure. You’ll be able to easily record your blood pressure measurements. You’ll get reminders of when you need to next check your blood pressure. We’ll do all the hard work for you by calculating a running average of your blood pressure readings. You'll then get free personalised advice!
-			<% if !user_signed_in? %>
-				<%= link_to 'Find out more.', static_pages_features_path %>
-			<% end %>
-			</p>
 		</div>
 		
 		<div id='links'>
 			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span id='link_title'>How do I measure my blood pressure?</span>
+				<span class='link_title'>How do I measure my blood pressure?</span>
 				<span class='link_text'>One of the best ways is to use a home blood pressure machine… <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link2') do %>
 				<%= image_tag("diary_small.jpg") %>
-				<span id='link_title'>When should I measure my blood pressure?</span>
+				<span class='link_title'>When should I measure my blood pressure?</span>
 				<span class='link_text'>You should measure your blood pressure each morning and evening… <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link1') do %>
 				<%= image_tag("blood_pressure_machine_small.jpg") %>
-				<span id='link_title'>How do I choose a blood pressure machine?</span>
+				<span class='link_title'>How do I choose a blood pressure machine?</span>
 				<span class='link_text'>You don’t need to spend much money to get a blood pressure machine… <span class='more'>find out more.</span></span>
 			<% end %>
 
