corrected error in strip3 with text div

--- a/app/views/info/info/home_page.html.erb
+++ b/app/views/info/info/home_page.html.erb
@@ -17,7 +17,9 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Information and advice</h2>
+			<div id='text'>
+				<h2>Information and advice</h2>
+			</div>
 		</div>
 		
 		<div id='links'>
