--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -22,7 +22,9 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Measuring blood pressure</h2>
+			<div id='text'>
+				<h2>Measuring blood pressure</h2>
+			</div>
 		</div>
 		
 		<div id='links'>
