--- a/app/views/info/info/measuring_blood_pressure.html.erb
+++ b/app/views/info/info/measuring_blood_pressure.html.erb
@@ -22,7 +22,7 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<div id='text'>
+			<div id='welcome'>
 				<h2>Measuring blood pressure</h2>
 			</div>
 		</div>
