--- a/app/views/info/info/what_are_the_best_medication_options_for_me.html.erb
+++ b/app/views/info/info/what_are_the_best_medication_options_for_me.html.erb
@@ -20,23 +20,23 @@
 		
 		<div id='links'>
 			<%= link_to(info_calcium_channel_blockers_path, :class => 'info_link_slim') do %>
-				<span id='link_title'>Calcium channel blockers</span>
+				<span class='link_title'>Calcium channel blockers</span>
 				<span class='link_text'>These are often a first choice treatment for treating high blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_ace_inhibitors_path, :class => 'info_link_slim') do %>
-				<span id='link_title'>ACE inhibitors</span>
+				<span class='link_title'>ACE inhibitors</span>
 				<span class='link_text'>These are also sometimes a first choice treatment... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_a2rbs_path, :class => 'info_link_slim') do %>
-				<span id='link_title'>A2RBs</span>
+				<span class='link_title'>A2RBs</span>
 				<span class='link_text'>These are mostly used if people get side effects from using an ACE inhibitor... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_diuretics_path, :class => 'info_link_slim') do %>
-				<span id='link_title'>Diuretics</span>
+				<span class='link_title'>Diuretics</span>
 				<span class='link_text'>These tend to be used as an additional treatment with other blood pressure medication... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_beta_blockers_path, :class => 'info_link_slim') do %>
-				<span id='link_title'>Beta blockers</span>
+				<span class='link_title'>Beta blockers</span>
 				<span class='link_text'>These are mostly used as an addition to other medications if your blood pressure isn’t already well controlled... <span class='more'>find out more.</span></span>
 			<% end %>
 		
