--- a/app/views/info/info/a2rbs.html.erb
+++ b/app/views/info/info/a2rbs.html.erb
@@ -1,18 +1,21 @@
 <div id='main'>
-	<div id='strip1'>
-		<div id='strip1_content'>
-			<h1>Your choice of blood pressure treatment</h1>
-		</div>
-	</div>
+	<%= render 'info/treating_bp_title' %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>A2RBs</h2>
+			<div id='welcome'>
+				<h2>A2RBs</h2>
+			</div>
+			
+			<%= render 'info/questions' %>
+			
+			<div id='text'>
 			<h3>Benefits</h3>
 			<p>You will generally only be started on these medications if you get a dry cough from being on an ACE inhibitor. Although they have less side effects, there is not as much evidence as to their effectiveness as there is for ACE inhibitors as they are a newer group of medications. However, it is likely that they share similar benefits to ACE inhibitors.</p>
 			
 			<h3>Side effects</h3>
 			<p>Like their close relations ACE inhibitors, sometimes when you first start taking them these medications can make you feel dizzy. This usually gets better after you’ve been taking them for a couple of days.</p>
+			</div>
 		</div>
 	
 	</div>
