--- a/app/views/info/info/lifestyle_options.html.erb
+++ b/app/views/info/info/lifestyle_options.html.erb
@@ -25,17 +25,17 @@
 		<div id='links'>
 			<%= link_to(info_diet_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_apple_small_3.jpg") %>
-				<span id='link_title'>Food and drink</span>
+				<span class='link_title'>Food and drink</span>
 				<span class='link_text'>Your diet can help lower your blood pressure... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_exercise_path, :class => 'info_link2') do %>
 				<%= image_tag("man_running_small_3.jpg") %>
-				<span id='link_title'>Exercise</span>
+				<span class='link_title'>Exercise</span>
 				<span class='link_text'>If you exercise regularly you will get numerous health benefits... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_smoking_path, :class => 'info_link1') do %>
 				<%= image_tag("ashtray_small.jpg") %>
-				<span id='link_title'>Smoking</span>
+				<span class='link_title'>Smoking</span>
 				<span class='link_text'>Smoking affects your health in many ways... <span class='more'>find out more.</span></span>
 			<% end %>
 			
