--- a/app/views/info/info/what_is_blood_pressure.html.erb
+++ b/app/views/info/info/what_is_blood_pressure.html.erb
@@ -18,17 +18,17 @@
 		<div id='links'>
 			<%= link_to(info_what_am_i_measuring_path, :class => 'info_link1') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
-				<span id='link_title'>What am I measuring?</span>
+				<span class='link_title'>What am I measuring?</span>
 				<span class='link_text'>The two numbers measure the pressure in your arteries at the highest and lowest points of your pulse... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_what_do_the_numbers_mean_path, :class => 'info_link2') do %>
 				<%= image_tag("number_23_small.jpg") %>
-				<span id='link_title'>What do the numbers mean?</span>
+				<span class='link_title'>What do the numbers mean?</span>
 				<span class='link_text'>They give you an idea of how hard your heart is having to work to pump blood around your body... <span class='more'>find out more.</span></span>
 			<% end %>
 			<%= link_to(info_what_is_the_normal_range_for_me_path, :class => 'info_link1') do %>
 				<%= image_tag("tick_small.jpg") %>
-				<span id='link_title'>What is the normal range?</span>
+				<span class='link_title'>What is the normal range?</span>
 				<span class='link_text'>This depends on whether you are on treatment or have any other medical conditions... <span class='more'>find out more.</span></span>
 			<% end %>
 			
